--- a/opengroup.html
+++ b/opengroup.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" type="text/css" href="css/lib/sm.css">
     <link rel="stylesheet" type="text/css" href="css/lib/sm-extend.css">
-    <link rel="stylesheet" type="text/css" href="css/moduel.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 
