--- a/accountlist.html
+++ b/accountlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_eg16ytxjphc9pb9.css">
+    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_up1w8xn3gak2zkt9.css">
     <link rel="stylesheet" type="text/css" href="css/sm.css">
     <link rel="stylesheet" type="text/css" href="css/module.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -25,7 +25,7 @@
                 <h1 class="title">账户明细</h1>
             </header>
             <div class="content ">
-                <div class="buttons-row">
+                <div class="buttons-row tab-btn">
                     <a href="#all" class="tab-link active cell-main">全部</a>
                     <a href="#in" class="tab-link  cell-main">赚取</a>
                     <a href="#out" class="tab-link cell-main">消费</a>
