--- a/addAddress.html
+++ b/addAddress.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_507155_s1pkeywbq08uxr.css">
-    <title>新增收获地址</title>
+    <title>味易欧商城</title>
 </head>
 <body>
 <div class="page-group">
