--- a/addressList.html
+++ b/addressList.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_507155_s1pkeywbq08uxr.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_x2zdjz6fue3cv7vi.css"/>
-    <title>收获地址管理</title>
+      <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_eg16ytxjphc9pb9.css">
+    <title>味易欧商城</title>
     <style>
     </style>
 </head>
@@ -21,7 +21,7 @@
         <!--头部内容 !-->
         <header class="bar bar-nav">
              <button class="left-icon button button-link button-nav pull-left" >
-    <span class="iconfont  icon-zuojiantou"></span>
+    <span class="iconfont  icon-jiantouright"></span>
   </button>
             <h1 class="title">选择收货地址</h1>
         </header>
