--- a/editAddress.html
+++ b/editAddress.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/lib/sm-extend.css">
     <link rel="stylesheet" type="text/css" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_507155_s1pkeywbq08uxr.css">
+    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_eg16ytxjphc9pb9.css">
     <title>编辑收获地址</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <!--头部内容 !-->
        <header class="bar bar-nav">
   <button class="left-icon button button-link button-nav pull-left" >
-    <span class="iconfont  icon-zuojiantou"></span>
+    <span class="iconfont  icon-jiantouright"></span>
   </button>
   <button class="right button button-link button-nav pull-right">
     <span>删除</span>
