--- a/finishOrd.html
+++ b/finishOrd.html
@@ -63,6 +63,7 @@
                 <li class="link-box right">
                    <span class="service">联系客服</span> 
                    <span class="watch">查看物流</span>
+                  <!--  <span class="watch">取消订单</span> -->
                 </li>
                </ul>
                <ul class="inf-wrapper">
