--- a/walletList.html
+++ b/walletList.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>提现记录</title>
+    <title>味易欧商城</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/lib/sm-extend.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-     <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_507155_s1pkeywbq08uxr.css">
+       <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_eg16ytxjphc9pb9.css">
 </head>
 <body>
 <div class="page-group">
@@ -18,7 +18,7 @@
         <!--头部内容 !-->
         <header class="bar bar-nav">
              <button class="left-icon button button-link button-nav pull-left" >
-                <span class="iconfont  icon-zuojiantou"></span>
+                <span class="iconfont  icon-jiantouright"></span>
             </button>
             <h1 class="title">提现记录</h1>
         </header>
