--- a/shareSuccess.html
+++ b/shareSuccess.html
@@ -10,30 +10,24 @@
  <link rel="stylesheet" type="text/css" href="css/lib/sm-extend.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-  <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_eg16ytxjphc9pb9.css">
+
 </head>
 
-<body>
-<div class="page-group">
-    <div class="page">
-        <div class="content openGroup-content" style="background: #fff;">
-            <!--头部内容 !-->
-            <div class="searchbar">           
-                <span class="iconfont icon-jiantouright ico pull-left cell-left" id="leftBtn"></span>               
-                <input type="text" placeholder="搜索商品" class="search">
-                 <span class="search-span">搜索</span>              
-            </div>
-            <div class="hot-div">
-                <p class="hot-p">热门推荐</p>
-                <span>好吃水蜜桃</span>
-                <span>特价打折的好吃苹果</span>
-                <span>好吃水蜜桃</span>
-                <span>特价打折的好吃苹果</span>
-                </div>
-            </div>
-        </div>
-    </div>
+<body>   
+	<div class="share-body">
+		<span class="span-title">分享成功</span>
+		<div class="share-content">
+        <p>分享三次以上，拼团成功率高达98%哦</p>
+		<span class="continue-share">继续分享</span>
+		<div class="order">  
+   <span class="line"></span>  
+   <span class="txt">好货提示</span>  
+   <span class="line"></span>  
+</div> 
+<p>90%的人，都在这发现了心仪好货~</p> 
+<span class="span-go">前往味猫商城</span>
 </div>
+	</div>
 <script type='text/javascript' src='js/lib/zepto.js' charset='utf-8'></script>
 <script>
     $.config = {
@@ -43,6 +37,7 @@
 <script type='text/javascript' src='js/lib/sm.js' charset='utf-8'></script>
  <script type='text/javascript' src='js/lib/sm-extend.js' charset='utf-8'></script>
 <script>
+ 
     $.init();
 </script>
 </body>
