--- a/productDetail.html
+++ b/productDetail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_kygug1yj7wg66r.css">
+    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_508245_re1nubji8k2wqaor.css">
     <link rel="stylesheet" type="text/css" href="css/sm.css">
     <link rel="stylesheet" type="text/css" href="css/lib/swiper-3.4.2.min.css">
     <link rel="stylesheet" type="text/css" href="css/module.css">
@@ -44,12 +44,12 @@
                     <div class="swiper-pagination"></div>
                 </div>
                 <!-- 标题 -->
-                <li class="goods-det">
+                <li class="goods-det clearfix">
                     <h1 class="over xl">钛伽机械鼠标 有线台式电脑笔记本网吧金属加重CF游戏鼠标LOL专用</h1>
-                    <div>
+                    <div style="line-height: 1.5rem;">
                         <span class="price red xl"><b>158.00</b></span>
                         <s class="l hui price ">158.00</s>
-                        <div class="pull-right"><span class="hui l">限时团购</span>&nbsp;<span class="time l">13天12小时21分44秒</span></div>
+                        <div class="pull-right m"><span class="hui ">限时团购</span>&nbsp;<span class="time ">13天12小时21分44秒</span></div>
                     </div>
                 </li>
                 <!-- 参团 -->
@@ -63,24 +63,24 @@
                     </ul>
                     <ul class="underline">
                         <div class="inf-box flex middle">
-                            <img src="" alt="" class="pic cell-left">
-                            <div class="name">林志伟</div>
-                            <div class="cell-main right fn cell-right">
-                                <span class="xl">还差<span class="pnum">1</span>人拼成</span>
-                                <div class="add l">宁海社区17号楼1103</div>
+                            <img src="" alt="" class="pic ">
+                            <div class="name xl">林志伟</div>
+                            <div class="cell-main right fn inf-a">
+                                <span class="l">还差<span class="pnum">1</span>人拼成</span>
+                                <div class="addre m">宁海社区17号楼1103</div>
                             </div>
-                            <div class="join cell-right">去拼团</div>
+                            <div class="join cell-right xl">去拼团</div>
                         </div>
                     </ul>
                     <ul class="underline">
                         <div class="inf-box flex middle">
                             <img src="" alt="" class="pic cell-left">
-                            <div class="name">林志伟</div>
-                            <div class="cell-main right fn cell-right">
-                                <span class="xl">还差<span class="pnum">1</span>人拼成</span>
-                                <div class="add l">宁海社区17号楼1103</div>
+                            <div class="name xl">林志伟</div>
+                            <div class="cell-main right fn inf-a">
+                                <span class="l">还差<span class="pnum">1</span>人拼成</span>
+                                <div class="addre m">宁海社区17号楼1103</div>
                             </div>
-                            <div class="join cell-right">去拼团</div>
+                            <div class="join cell-right xl">去拼团</div>
                         </div>
                     </ul>
                 </ul>
@@ -123,9 +123,9 @@
                         <div class="assess-det xl">总体不错，就是没有黑色的。以前都是用黑色的，然后鼠 标底部的感应有点太灵敏了，抬起来晃动鼠标。指针还是 跟着动，
                         </div>
                         <li class="flex pic-box">
-                            <img src="" alt="" class="img cell-main">
-                            <img src="" alt="" class="img cell-main">
-                            <img src="" alt="" class="img cell-main">
+                            <img src="" alt="" class="img">
+                            <img src="" alt="" class="img">
+                            <img src="" alt="" class="img">
                         </li>
                     </div>
                 </ul>
@@ -270,13 +270,38 @@
         <!-- 规格 -->
         <ul class="spec-box"> 
             <img src="" alt="" class="goodpic">
+            <ul class="mb">
             <li class="spec-main">
-                <div class="name over">钛伽机械鼠标 有线台式电 脑笔记本网吧金属加重...
+                <div class="name over xl">钛伽机械鼠标 有线台式电 脑笔记本网吧金属加重...
                 </div>
                 <span class="red price xl">158.00</span>
                 <div class="l">库存<span class="specnum">10000</span>件</div>
             </li>
-            div.
+            <div class="flex flex-wrap">
+                <div class="spec">红色  金属质</div>
+                <div class="spec">红色  金属质</div>
+                <div class="spec">红色  金属质</div>
+                <div class="spec">红色  金属质</div>
+                <div class="spec">红色  金属质</div>
+            </div>
+            <li class="upline underline">
+                <div class="flex numsel">
+                    <div class="text">购买数量</div>
+                    <div class="cell-main right">
+                        <div class="reduce"><i class="iconfont icon-jian"></i></div>
+                        <span class="number hui">1</span>
+                        <div class="add"><i class="iconfont icon-jia"></i></div>
+                    </div>
+                </div>
+            </li>
+            </ul>
+            <div class="bottom">
+                <div class="flex">
+                    <div class="cell-main goCart">加入购物车</div>
+                    <div class="cell-main joingroup">一键参团</div>
+                </div>
+            </div>
+            <i class="close-box iconfont icon-close2"></i>
         </ul>
     </div>
     <script type='text/javascript' src='js/lib/zepto.js' charset='utf-8'></script>
